   for the symbol at point.
 * added eclim-java-refactor-move-class which allows moving a top level
   class or interface from one package to another.
 * added eclim-project-setting-set which can assign an Eclim project
   setting.
 * Fixed some compiler warnings. Not all compiler warnings were fixed
   since those changes could not be tested.

== 0.3

=== New Features
 * organize imports
 * browsing with the class hierarchy
 * override / implement methods
 * display problems
 * run Ant targets
 * run Maven phases and goals
 * automatic refresh of the problems buffer
 * file-filter for the problems buffer
 * interface improvements for the problems buffer
 * improved mechanisms for calling the eclim server
 * rename/refactor in java code works as expected
 * functions for find declarations and refrences of java methods and members
 * Error highlighting in code
 * Support for auto-complete-mode
 * eclimd module to start/stop eclimd from emacs
 * Generation of getter and setter methods.
 * User commands for adding, listing and removing project natures.
 * Running all JUnit tests project or in a class or just the test method at point
 * additional info in modeline about errors and warnings
 * added support for scala completion

=== Bugfixes
 * removed extra parentheses around function
 * fixed a problem on startup when the eclimd server was not started
 * bugfix in call to eclim-call-process
 * Added a new directory for eclipse (may only be Arch linux specific)
 * Changed eclim--project-name to get the project name out of eclipse
   than futz with matching dir names to workspace names.
 * Added eclim-eclipse-dirs which can be used if eclipse is not
   installed in the standard location
 * Changed eclim--project-name to get the project name out of
   project_by_resource command, and eclim--project-current-file to use
   project_link_resource command, so that external source files not in the
   eclipse working directory are correctly handled.