@@ -4,7 +4,7 @@ env:
   global:
     - CI=true
   matrix:
-    - EVM_EMACS=emacs-24.3-travis
+    - EVM_EMACS=emacs-24.4-travis
     - EVM_EMACS=emacs-git-snapshot-travis
 
 notifications:
