@@ -1,3 +1,4 @@
+;; -*- lexical-binding: t -*-
 ;;; eclimd.el --- Start and stop eclimd from within emacs
 
 ;; Copyright (C) 2012 Vedat Hallac
@@ -24,7 +25,8 @@
 ;; Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
 ;; MA 02110-1301, USA.
 
-(require 'eclim)
+(require 'eclim-common)
+(require 'cl-lib)
 (eval-when-compile (require 'eclim-macros))
 
 (defgroup eclimd nil
@@ -75,54 +77,119 @@ You can freeze emacs until eclimd is ready to accept commands with this variable
     (let ((eclim-prog (executable-find eclim-executable)))
       (expand-file-name "eclimd" (file-name-directory eclim-prog)))))
 
-(defun eclimd--running-p ()
-  (not (null (get-buffer-process eclimd-process-buffer))))
+(defconst eclimd--started-regexp
+  "Eclim Server Started on\\(?: port\\|:\\) \\(?:\\(?:[0-9]+\\.\\)\\{3\\}[0-9]+:\\)?\\([0-9]+\\)")
 
-(defun eclimd--match-process-output (regexp proc)
+(defun eclimd--read-workspace-dir ()
+  (read-directory-name "Eclimd workspace directory: "
+                       eclimd-default-workspace nil t))
+
+(defcustom eclimd-autostart-with-default-workspace
+  nil
+  "Whether to skip asking the user about a workspace when eclimd gets autostarted.
+When `eclimd-autostart' is set to t, this option controls whether
+eclimd is started silently with `eclimd-default-workspace' as
+workspace or whether the user is asked for a workspace as with
+regular calls to `start-eclimd'."
+  :tag "Autostart eclimd with default workspace"
+  :type 'boolean
+  :group 'eclimd)
+
+(defun eclimd--autostart-workspace ()
+  (if eclimd-autostart-with-default-workspace
+      eclimd-default-workspace
+    (eclimd--read-workspace-dir)))
+
+(defcustom eclimd-autostart
+  nil
+  "Automatically start eclimd from within Emacs when needed.
+You may want to set this to nil if you prefer starting eclimd
+manually and don't want it to run as a child process of
+Emacs. eclimd gets started either when `eclim-mode' is enabled or
+the first time `global-eclim-mode' needs it to determine if
+`eclim-mode' should be enabled in a buffer. See also
+`eclimd-autostart-with-default-workspace'."
+  :tag "Autostart eclimd"
+  :type 'boolean
+  :group 'eclimd)
+
+(defvar eclimd--process-event-functions nil
+  "List of functions to run when eclimd outputs text or changes state.
+Functions receive the process, the output string and the process
+state as argument. Any of the last two may be nil (but never
+both). When a function returns nil it is removed from the list,
+functions returning non-nil are kept.")
+
+(defun eclimd--process-sentinel (proc state)
+  (setq eclimd--process-event-functions
+        (cl-remove-if-not (lambda (fun) (funcall fun proc nil state))
+                          eclimd--process-event-functions)))
+
+(defvar eclimd--comint-process-filter nil)
+
+(defun eclimd--process-filter (proc string)
+  (setq eclimd--process-event-functions
+        (cl-remove-if-not (lambda (fun) (funcall fun proc string nil))
+                          eclimd--process-event-functions))
+  ;; Appends output to eclimd buffer.
+  (when eclimd--comint-process-filter
+    (funcall eclimd--comint-process-filter proc string)))
+
+(defun eclimd--match-process-output (regexp &optional async callback)
   "Wait for the given process to output a string that matches the specified regexp.
-Return the string used for `match-string' if a match is found, and nil if the process is killed.
+When ASYNC is omitted or nil block and return the string used for
+`match-string' if a match is found, and nil if the process is
+killed. Execute CALLBACK when the process outputs the desired
+string or terminates and pass the corresponding return value as
+argument. CALLBACK can access the match data produced by calls to
+`match-string' with REGEXP and the process output as argument,
+after the function returns this data is no longer available."
+  (let* ((output "")
+         (terminated-p)
+         (finished-p)
+         (closure (lambda (proc string state)
+                    (setf output (concat output string))
+                    (setf terminated-p (not (eq 'run (process-status proc))))
+                    (setf finished-p (or terminated-p
+                                         ;; Emacs automatically saves and
+                                         ;; restores the match data when running
+                                         ;; process filter functions and
+                                         ;; sentinels (from where this closure
+                                         ;; is called).
+                                         (string-match regexp output)))
+                    (when (and finished-p callback)
+                      (funcall callback (unless terminated-p output)))
+                    ;; Remove the closure from the hook when it has finished.
+                    (not finished-p))))
 
-The caller must use `save-match-data' to preserve the match data if necessary."
-  (let ((old-filter (process-filter proc))
-        (old-sentinel (process-sentinel proc))
-        (output "")
-        (terminated-p))
-    (set-process-filter proc (lambda (proc string)
-                               (setf output (concat output string))
-                               ;; Chain to the old filter
-                               (if old-filter
-                                   (funcall old-filter proc string))))
-    (set-process-sentinel proc (lambda (proc state)
-                                 (unless (eq 'run
-                                             (process-status proc))
-                                   (setf terminated-p t))))
-    (while (and (not terminated-p)
-                (not (string-match regexp output)))
-      (accept-process-output proc))
-    (set-process-sentinel proc old-sentinel)
-    (set-process-filter proc old-filter)
-    (and (not terminated-p) output)))
+    (if async
+        (add-hook 'eclimd--process-event-functions closure)
+      (unwind-protect
+          (progn
+            (add-hook 'eclimd--process-event-functions closure)
+            (while (not finished-p)
+              (accept-process-output eclimd-process))
+            (unless terminated-p output))
+        (remove-hook 'eclimd--process-event-functions closure)))))
 
-(defun wait-eclimd-start ()
-  "Wait for the eclimd server to become active.
-This function also waits for the eclimd server to report that it is started.
-It returns the port it is listening on"
-  (let ((eclimd-start-regexp "Eclim Server Started on\\(?: port\\|:\\) \\(?:\\(?:[0-9]+\\.\\)\\{3\\}[0-9]+:\\)?\\([0-9]+\\)"))
-    (save-match-data
-      (let ((output (eclimd--match-process-output eclimd-start-regexp eclimd-process)))
-        (when output
-          (setq eclimd-port (match-string 1 output))
-          (message (concat "eclimd serving at port " eclimd-port)))))
-    eclimd-port))
+(defun eclimd--await-connection (&optional async callback)
+  "Execute callback when eclimd server becomes active.
+CALLBACK receives no arguments. It is not called when eclimd
+fails to start."
+  (eclimd--match-process-output
+   eclimd--started-regexp async
+   (lambda (output)
+     (when output
+       (setq eclimd-port (match-string 1 output))
+       (when callback (funcall callback))))))
 
-(defun start-eclimd (workspace-dir)
-  (interactive (list (read-directory-name "Workspace directory: "
-                                          eclimd-default-workspace nil t)))
+(defun start-eclimd (workspace-dir &optional callback)
+  (interactive (list (eclimd--read-workspace-dir)))
   (let ((eclimd-prog (eclimd--executable-path)))
     (if (not eclimd-prog)
         (message "Cannot start eclimd: check eclimd-executable variable.")
-      (if (eclimd--running-p)
-          (message "Cannot start eclimd: eclimd is already running.")
+      (if eclimd-process
+          (message "Cannot start eclimd: eclimd was already started.")
         (message (concat "Starting eclimd for workspace: " workspace-dir "..."))
         (setq eclimd-process-buffer
               (make-comint eclimd-process-buffer-name
@@ -131,18 +198,45 @@ It returns the port it is listening on"
                            (concat "-Dosgi.instance.area.default="
                                    (replace-regexp-in-string "~" "@user.home" workspace-dir))))
         (setq eclimd-process (get-buffer-process eclimd-process-buffer))
-        (when eclimd-wait-for-process
-          (wait-eclimd-start))))))
+        (setq eclimd--comint-process-filter (process-filter eclimd-process))
+        (set-process-filter eclimd-process 'eclimd--process-filter)
+        (set-process-sentinel eclimd-process 'eclimd--process-sentinel)
+        (add-hook 'kill-emacs-hook #'stop-eclimd)
+        ;; The flag is required because on exit Emacs asks the user about
+        ;; running processes before running the `kill-emacs-hook'.
+        (set-process-query-on-exit-flag eclimd-process nil)
+        (eclimd--await-connection
+         (not eclimd-wait-for-process)
+         (lambda ()
+           (message "eclimd serving at port %s" eclimd-port)
+           (when callback (funcall callback))))))))
+
+(defun eclimd--ensure-started (&optional async callback)
+  "Ensure eclimd is running, autostarting it when possible.
+An error is raised when `eclimd-autostart' is nil but there is no
+eclimd process."
+  (if (eclim--connected-p)
+      (when callback (funcall callback))
+    (if eclimd-autostart
+        (if eclimd-process
+            ;; `eclimd-process' is set but we can not connect to eclimd, thus
+            ;; eclimd is currently being started.
+            (eclimd--await-connection async callback)
+          (let (eclimd-wait-for-process (not async))
+            (start-eclimd (eclimd--autostart-workspace) callback)))
+      (error "Autostarting of eclimd is disabled, please start eclimd manually."))))
 
 (defun stop-eclimd ()
   (interactive)
   (when eclimd-process
-    (eclim/execute-command "shutdown")
-    (eclimd--match-process-output "Process eclimd finished" eclimd-process)
+    (when (eclim--connected-p)
+      (eclim/execute-command "shutdown")
+      (eclimd--match-process-output "Process eclimd finished"))
     (delete-process eclimd-process)
     (setq eclimd-process nil))
   (when eclimd-process-buffer
     (kill-buffer eclimd-process-buffer)
-    (setq eclimd-process-buffer nil)))
+    (setq eclimd-process-buffer nil))
+  (remove-hook 'kill-emacs-hook #'stop-eclimd))
 
 (provide 'eclimd)
